# eptitulos

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Procfile  alembic.ini  pyproject.toml  requirements.txt
backend/.ebextensions/: 02_migrate.config
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_progress_log.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/clients/: n8n_client.py
backend/app/middleware/: auth.py  error_handler.py
backend/app/models/: analysis.py  common.py  db.py
backend/app/repositories/: analysis_repository.py  user_repository.py
backend/app/routers/: analysis.py  auth.py  health.py  webhook.py
backend/app/services/: analysis_service.py  auth_service.py  storage_service.py
backend/tests/: conftest.py  test.env  test_analysis_repository.py  test_analysis_router.py  test_analysis_service.py  test_auth_service.py
context/: SESSION_LOG.md  SPRINT.md
docs/requirements/: requerimientos.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAnalyses.ts  useAnalysis.ts  useCancelAnalysis.ts  useCreateAnalysis.ts  useDeleteAnalysis.ts  usePdfDownload.ts
frontend/src/lib/: cn.ts  constants.ts  format.ts
frontend/src/pages/: AnalysisDetailPage.tsx  DashboardPage.tsx  LoginPage.tsx  NewAnalysisPage.tsx
(+24 files in other folders)
